Correct name from Setra to Sethra in HTML

--- a/birthday_site_setra (1).html
+++ b/birthday_site_setra (1).html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Setra</title>
+<title>Happy Birthday Sethra</title>
 <style>
 body {
   margin: 0;
@@ -79,7 +79,7 @@ p {
 <body>
 
 <div class="card">
-  <h1>🎉 Happy Birthday, Setra! 🎉</h1>
+  <h1>🎉 Happy Birthday, Sethra! 🎉</h1>
   <p>
     I wish you all the best and all your dreams come true.<br>
     (Many men and a lot of money).
